[package]
name = "hyper-tower-axum-server-example"
version = "0.1.0"
edition = "2021"
description = "An example of using axum-server with hyper services"

[dependencies]
axum-server = "0.7.1"
http-body-util = "0.1.2"
hyper = "1.4.1"
pin-project-lite = "0.2.14"
tokio = { version = "1.40.0", features = ["full"] }
tower = { version = "0.5.1", features = ["make"] }
tower-service = "0.3.3"
